Fixed info card width on mobile

--- a/src/interface/search.scss
+++ b/src/interface/search.scss
@@ -1,10 +1,12 @@
 /*
- *   search.css
+ *   search.scss
  *   solar-system-3js
  * 
  *   Created by Fatih Balsoy on 5/3/23
  *   Copyright © 2023 Fatih Balsoy. All rights reserved.
  */
+
+$max-width: 600px;
 
 .search {
     position: relative;
@@ -14,13 +16,20 @@
 }
 
 .search-bar {
-    margin: 10px; 
-    padding: 2px 4px; 
-    display: flex; 
-    align-items: center; 
+    margin: 10px;
+    padding: 2px 4px;
+    display: flex;
+    align-items: center;
     width: 400px;
     position: fixed;
     box-sizing: border-box;
+
+    @media (max-width: $max-width) {
+        width: unset;
+        margin: 10px;
+        right: 0;
+        left: 0;
+    }
 }
 
 .search-results {
@@ -31,38 +40,39 @@
     padding: 10px
 }
 
-@media (max-width: 600px) {
-    .search-bar {
-        width: unset;
-        margin: 10px;
-        right: 0;
-        left: 0;
-    }
-}
-
 .info-card-body {
     width: 100%;
     height: 100%;
     position: relative;
     z-index: 98;
- }
+}
 
- .info-card {
+.info-card {
     /* margin: 10px;  */
     /* display: ;  */
-    align-items: center; 
+    align-items: center;
     width: 420px;
     height: 100%;
     position: fixed;
     box-sizing: border-box;
     align-items: start;
     overflow-y: auto;
+
+    @media (max-width: $max-width) {
+        width: unset;
+        right: 0;
+        left: 0;
+    }
 }
 
 .info-card-image {
     object-fit: cover;
     width: 420px;
     height: 250px;
+
+    @media (max-width: $max-width) {
+        width: 100%;
+    }
 }
 
 .info-card-content {
